# zix

./: .clang-tidy  .gdbinit  .gitignore  Makefile  README.md  flake.nix  sdk.nix
app/: CMakeLists.txt  setup-sdk-nrf.sh  west.yml
app/config/: codechecker.yml  skip.codechecker
app/src/: main.c
boards/steval_stwinkt1b/: board.yml  steval_stwinkt1b.yaml
hello-world/: CMakeLists.txt  prj.conf  west.yml
hello-world/src/: main.c
otau_example/: CMakeLists.txt  overlay-bt.conf  prj.conf  sysbuild.conf  west.yaml  west.yml
otau_example/src/: main.c
otau_example/sysbuild/: mcuboot.conf
otau_example/tools/: build.sh
scripts/: 99-stlinkv2_1.rules  install_ble_sniffer.sh  install_nrf_tools.sh  install_power_profiler.sh  install_stm32.sh  install_zephyr_sdk.sh  nrf_tools_config.sh  power_profiler_config.sh  run_ble_sniffer_tool.sh  run_power_profiler.sh  stm32cubeprg-auto-install.xml
stwinkt1b_app/boards/steval_stwinkt1b/: Kconfig.defconfig  Kconfig.steval_stwinkt1b  steval_stwinkt1b.dts
workspace-m/.west/: config
workspace-m/app/: CMakeLists.txt  west.yml
workspace-m/app/boards/: nrf52840dk_nrf52840.overlay
workspace-m/app/src/: main.c
